[gd_scene load_steps=4 format=3 uid="uid://ct4blqwh4y6ab"]

[ext_resource type="Script" path="res://src/energy_plant.gd" id="1_kwxyt"]
[ext_resource type="Texture2D" uid="uid://dss7fnknoqxtk" path="res://Assets/Buildings/barn_red_a.png" id="2_1cml2"]

[sub_resource type="Theme" id="Theme_f6ssq"]

[node name="EnergyPlant" type="Node2D"]
script = ExtResource("1_kwxyt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1cml2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -88.0
offset_top = 41.0
offset_right = 56.0
offset_bottom = 69.0
color = Color(0.109804, 0.0705882, 0.25098, 0.74902)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 5.0
offset_right = 86.0
offset_bottom = 26.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -88.0
offset_top = 68.0
offset_right = 56.0
offset_bottom = 98.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_right = 101.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "‚ö°          üí∞         "
vertical_alignment = 1

[node name="Poll" type="Label" parent="ColorRect2"]
visible = false
layout_mode = 0
offset_left = 112.0
offset_right = 144.0
offset_bottom = 31.0
tooltip_text = "This plant produces CO2"
mouse_filter = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "üè≠"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 24.0
offset_top = 3.0
offset_right = 52.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 80.0
offset_top = 4.0
offset_right = 107.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Switch" type="CheckButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = 43.0
offset_right = 43.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_f6ssq")
button_pressed = true
action_mode = 0
keep_pressed_outside = true
flat = true
alignment = 1
icon_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
visible = false
z_index = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-4, -5)
polygon = PackedVector2Array(-7, 48, -84, 47, -83, 4, -82, -42, -7, -39, 61, -38, 74, 2, 61, 44)

[connection signal="toggled" from="Switch" to="." method="_on_switch_toggled"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
